<resources>
    <string name="app_name">FarmBros</string>
    <string name="texto_bienvenida">Bienvenidos</string>
    <string name="registro">Registro</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="cierre_sesion">Cerrar sesión</string>
    <string name="indicador_consulta">Ingrese aquí su consulta</string>
    <string name="titulo_spinner_consulta">Seleccione un asunto</string>
    <string name="asunto_consulta">Asunto</string>
    <string name="tomar_foto">Añadir foto</string>
    <string name="consulta">Consultar</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="password_usuario">Contraseña</string>
    <string name="productor">Productor</string>
    <string name="ingeniero">Ingeniero</string>


    <!-- Drawer -->
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawer_closed"></string>
    <string name="drawer_opened"></string>

    <!-- Drawer options Productor-->
    <string name="nueva_consulta">Consultar</string>
    <string name="ver_consultas_realizadas">Mis consultas realizadas</string>
    <string name="chats">Chats</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="title_activity_maps">Mapa</string>

    <!-- Drawer options Ingeniero -->
    <string name="foro_consultas">Foro de consultas</string>
    <string name="ver_consultas_atendidas">Mis consultas atendidas</string>

    <!-- Crear cuenta -->
    <string name="btn_crear_productor">Productor</string>
    <string name="btn_crear_ingeniero">Ingeniero agronomo</string>
    <string name="txt_elegir_cuenta">Elija la actividad que desarrolla para continuar</string>

    <!-- Fila consulta -->
    <string name="btn_ver_detalles">Ver detalles</string>
    <string name="txt_productor">Productor:</string>
    <string name="txt_ubicacion">Ubicacion:</string>
    <string name="txt_lat">Lat:</string>
    <string name="txt_long">Long:</string>
    <string name="txt_asunto">Asunto de consulta:</string>
    <string name="txt_fecha">Fecha:</string>

    <!-- Detalle consulta -->
    <string name="detalle_DetCons">Detalle de consulta de: </string>
    <string name="btn_enviar_mensaje_DetCons">Enviar mensaje a productor</string>
    <string name="btn_finalizar_consulta">Finalizar Consulta</string>
    <string name="error_BD">Error de Base de Datos</string>

    <!-- Chats -->
    <string name="enviar">Enviar</string>
    <string name="campo_mensaje">Escriba su mensaje</string>
    <string name="ver_conversacion">Ver</string>

    <!-- Notificaciones push -->
    <string name="channel_default">Notificaciones push</string>

    <!-- Notificacion consulta creada -->
    <string name="nombreNotificacionConsulta">FarmBros</string>
    <string name="detalleNotificacionOferta1">Consulta creada con éxito</string>
    <string name="nombreCanal">Consultas</string>
    <string name="descripcionCanal">Canal utilizado para notificaciones de consultas creadas</string>

</resources>