<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemNuevaConsulta"
        android:orderInCategory="1"
        android:title="@string/nueva_consulta"
        android:icon="@drawable/ic_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemVerConsultasRealizadas"
        android:orderInCategory="2"
        android:title="@string/ver_consultas_realizadas"
        android:icon="@drawable/ic_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemChats"
        android:orderInCategory="3"
        android:title="@string/chats"
        android:icon="@drawable/ic_chats"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemMiPerfil"
        android:orderInCategory="4"
        android:title="@string/mi_perfil"
        android:icon="@drawable/ic_profile"
        app:showAsAction="never" />

</menu>