<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemForoDeConsultas"
        android:orderInCategory="1"
        android:title="@string/foro_consultas"
        android:icon="@drawable/ic_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemVerConsultasAtendidas"
        android:orderInCategory="2"
        android:title="@string/ver_consultas_atendidas"
        android:icon="@drawable/ic_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemMiPerfil"
        android:orderInCategory="4"
        android:title="@string/mi_perfil"
        android:icon="@drawable/ic_profile"/>

</menu>