<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_elegir_cuenta"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <Button
        android:id="@+id/btnCrearProductor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_crear_productor"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnCrearIngeniero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_crear_ingeniero"
        app:layout_constraintTop_toBottomOf="@id/btnCrearProductor" />

</androidx.constraintlayout.widget.ConstraintLayout>