<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtNuevaConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_consulta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/txtFieldConsulta"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:ems="1000"
        android:background="@color/white"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/indicador_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtNuevaConsulta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/imageConsulta"
        android:layout_width="320dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/planta2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtFieldConsulta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/btnAgregarFoto"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:text="@string/tomar_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageConsulta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:text="@string/consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnAgregarFoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>